[package]
name = "kornia-apriltag-simulation"
version = "0.0.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking", "bevy_rapier3d/debug-render-3d"]

[dependencies]
bevy = "0.16.1"
bevy_rapier3d = "0.30.0"
